tests/rt/neg/ifc/cert-neg-02.trp
let val u = 10 raisedTo `{alice}`
    val _ = if u > 1 then 1 else 2 
in cert(u) 
end